# potato-shooter

./: .env  .gitignore  Cargo.toml  Deployment.md  Makefile  Readme.md
.cargo/: config.toml
gcp/: create-vm.ps1  create-vm.sh  startup.sh
src/: args.rs  components.rs  input.rs  main.rs
static/: index.html  main.js
