[package]
name = "potato-shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy_ggrs = { version = "0.15", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.9", features = ["ggrs"] }
dotenv = "0.15.0"
bevy_asset_loader = "0.20.2"
clap = { version = "4.4", features = ["derive"] }
bevy_roll_safe = "0.2"
bevy_egui = { version = "0.27.1", default-features = false }
rand = "0.8.5"
rand_xoshiro = "0.6.0"

[profile.dev.package."*"]
opt-level = 2
